[gd_scene load_steps=23 format=3 uid="uid://co3rj6o5p11p4"]

[ext_resource type="FontFile" uid="uid://b5gyg8rlkeg23" path="res://GameResources/Fonts/Fortzilla-Regular.otf" id="1_8xof8"]
[ext_resource type="Script" path="res://Scripts/UI/Settings_menu/Settings_menu.gd" id="1_lgrhf"]
[ext_resource type="Material" uid="uid://dfldw6o1mhiuj" path="res://GameResources/Materials/Dithering_Shader_Material.tres" id="4_a4uii"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7ef2k"]
bg_color = Color(0.205117, 0.205117, 0.205117, 1)
skew = Vector2(1, 0)
border_width_left = 10
border_width_right = 10
border_color = Color(0.147671, 0.147672, 0.147672, 1)
expand_margin_left = 10.0
expand_margin_right = 10.0
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_no026"]
bg_color = Color(0.689924, 0.251688, 0.319423, 1)
skew = Vector2(1, 0)
border_width_left = 10
border_width_right = 10
border_color = Color(0.616742, 0.039596, 0.0712458, 1)
expand_margin_left = 10.0
expand_margin_right = 10.0
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_crj7m"]
bg_color = Color(0.707967, 0.707967, 0.707966, 1)
skew = Vector2(1, 0)
border_width_left = 10
border_width_right = 10
border_color = Color(0.32544, 0.325441, 0.325441, 1)
expand_margin_left = 10.0
expand_margin_right = 10.0
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wkcre"]
bg_color = Color(0.439049, 0.439049, 0.439049, 1)
skew = Vector2(1, 0)
border_width_left = 10
border_width_right = 10
border_color = Color(0.32544, 0.325441, 0.325441, 1)
expand_margin_left = 10.0
expand_margin_right = 10.0
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gyate"]
bg_color = Color(0.775438, 0.514888, 0.575553, 1)
skew = Vector2(1, 0)
border_width_left = 10
border_width_right = 10
border_color = Color(0.32544, 0.325441, 0.325441, 1)
expand_margin_left = 10.0
expand_margin_right = 10.0
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6ii5b"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bkp28"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_aeuf6"]
bg_color = Color(0.6, 0.6, 0.647059, 0)
border_width_bottom = 5
border_color = Color(0.8, 0.8, 0.8, 0)
expand_margin_left = 20.0
expand_margin_right = 20.0
shadow_offset = Vector2(6.23, 8.125)
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_uj7i6"]
bg_color = Color(0.666569, 0.666569, 0.666569, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ay64e"]
bg_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hk1bi"]
bg_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jagra"]
border_width_left = 10
border_color = Color(0.329157, 0.329159, 0.329158, 1)
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xh3lp"]

[sub_resource type="Theme" id="Theme_hc302"]
Button/fonts/font = ExtResource("1_8xof8")
Button/styles/disabled = SubResource("StyleBoxFlat_7ef2k")
Button/styles/focus = SubResource("StyleBoxFlat_no026")
Button/styles/hover = SubResource("StyleBoxFlat_crj7m")
Button/styles/normal = SubResource("StyleBoxFlat_wkcre")
Button/styles/pressed = SubResource("StyleBoxFlat_gyate")
CheckBox/styles/disabled = SubResource("StyleBoxFlat_7ef2k")
CheckBox/styles/focus = SubResource("StyleBoxFlat_no026")
CheckBox/styles/hover = SubResource("StyleBoxFlat_crj7m")
CheckBox/styles/hover_pressed = SubResource("StyleBoxFlat_no026")
CheckBox/styles/normal = SubResource("StyleBoxFlat_wkcre")
CheckBox/styles/pressed = SubResource("StyleBoxFlat_gyate")
CheckButton/styles/disabled = null
Fonts/fonts/normal = null
HSlider/styles/grabber_area = SubResource("StyleBoxFlat_6ii5b")
HSlider/styles/grabber_area_highlight = SubResource("StyleBoxFlat_bkp28")
Label/font_sizes/font_size = 20
Label/fonts/font = ExtResource("1_8xof8")
PanelContainer/styles/panel = SubResource("StyleBoxFlat_aeuf6")
VScrollBar/styles/grabber = SubResource("StyleBoxFlat_uj7i6")
VScrollBar/styles/grabber_highlight = SubResource("StyleBoxFlat_ay64e")
VScrollBar/styles/grabber_pressed = SubResource("StyleBoxFlat_hk1bi")
VScrollBar/styles/scroll = SubResource("StyleBoxFlat_jagra")
VScrollBar/styles/scroll_focus = SubResource("StyleBoxFlat_xh3lp")
VSlider/styles/grabber_area = SubResource("StyleBoxFlat_6ii5b")
VSlider/styles/grabber_area_highlight = null
VSlider/styles/slider = SubResource("StyleBoxFlat_jagra")

[sub_resource type="LabelSettings" id="LabelSettings_jymd7"]
font_size = 20

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_rjb5e"]

[sub_resource type="Animation" id="Animation_2ynxc"]
resource_name = "OpenOptions"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(500, 165), Vector2(526, 165)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:size")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.2),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(577, 669)]
}

[sub_resource type="Animation" id="Animation_unn4j"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(227, 103)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:size")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(664, 669)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_nrxot"]
_data = {
"OpenOptions": SubResource("Animation_2ynxc"),
"RESET": SubResource("Animation_unn4j")
}

[node name="VBoxContainer" type="VBoxContainer"]
offset_left = 227.0
offset_top = 103.0
offset_right = 891.0
offset_bottom = 772.0
theme = SubResource("Theme_hc302")
script = ExtResource("1_lgrhf")
ditheringMaterial = ExtResource("4_a4uii")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_bottom = 20

[node name="OptionsNavigation" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="VisualsButton" type="Button" parent="MarginContainer/OptionsNavigation"]
layout_mode = 2
size_flags_vertical = 0
theme_override_colors/font_color = Color(1, 1, 1, 0.784314)
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 0)
theme_override_colors/font_outline_color = Color(0, 0, 0, 0)
theme_override_font_sizes/font_size = 24
text = "VISUAL"

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/OptionsNavigation"]
layout_mode = 2
theme_override_constants/margin_right = 15

[node name="SoundButton" type="Button" parent="MarginContainer/OptionsNavigation"]
layout_mode = 2
size_flags_vertical = 0
theme_override_colors/font_color = Color(1, 1, 1, 0.784314)
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 0)
theme_override_colors/font_outline_color = Color(0, 0, 0, 0)
theme_override_font_sizes/font_size = 24
text = "SOUND"

[node name="MarginContainer2" type="MarginContainer" parent="MarginContainer/OptionsNavigation"]
layout_mode = 2
theme_override_constants/margin_right = 15

[node name="ControlsButton" type="Button" parent="MarginContainer/OptionsNavigation"]
layout_mode = 2
size_flags_vertical = 0
theme_override_colors/font_color = Color(1, 1, 1, 0.784314)
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 0)
theme_override_colors/font_outline_color = Color(0, 0, 0, 0)
theme_override_font_sizes/font_size = 24
text = "CONTROLS"

[node name="HSeparator" type="HSeparator" parent="."]
layout_mode = 2

[node name="VisualOptionsContainer" type="MarginContainer" parent="."]
layout_mode = 2
size_flags_vertical = 0
size_flags_stretch_ratio = 1.95
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 40

[node name="VisualOptions" type="HBoxContainer" parent="VisualOptionsContainer"]
layout_mode = 2
size_flags_vertical = 0
size_flags_stretch_ratio = 2.65

[node name="VBoxContainer" type="VBoxContainer" parent="VisualOptionsContainer/VisualOptions"]
layout_mode = 2

[node name="Label" type="Label" parent="VisualOptionsContainer/VisualOptions/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "SCREEN RESOLUTION "
label_settings = SubResource("LabelSettings_jymd7")

[node name="Label2" type="Label" parent="VisualOptionsContainer/VisualOptions/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6
text = "FULLSCREEN"
label_settings = SubResource("LabelSettings_jymd7")

[node name="Label3" type="Label" parent="VisualOptionsContainer/VisualOptions/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6
text = "V-SYNC"
label_settings = SubResource("LabelSettings_jymd7")

[node name="Label5" type="Label" parent="VisualOptionsContainer/VisualOptions/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6
text = "DITHERING
"
label_settings = SubResource("LabelSettings_jymd7")

[node name="Label4" type="Label" parent="VisualOptionsContainer/VisualOptions/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6
text = "RESOLUTION SCALE
"
label_settings = SubResource("LabelSettings_jymd7")

[node name="Label6" type="Label" parent="VisualOptionsContainer/VisualOptions/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6
text = "COLOR DEPTH
"
label_settings = SubResource("LabelSettings_jymd7")

[node name="VSeparator" type="VSeparator" parent="VisualOptionsContainer/VisualOptions"]
layout_mode = 2
theme_override_constants/separation = 20
theme_override_styles/separator = SubResource("StyleBoxEmpty_rjb5e")

[node name="VBoxContainer2" type="VBoxContainer" parent="VisualOptionsContainer/VisualOptions"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ResolutionList" type="OptionButton" parent="VisualOptionsContainer/VisualOptions/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 3

[node name="Fullscreen-Checkbox" type="CheckBox" parent="VisualOptionsContainer/VisualOptions/VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 3

[node name="Vsync-Checkbox" type="CheckBox" parent="VisualOptionsContainer/VisualOptions/VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 3

[node name="HasDithering-Checkbox" type="CheckBox" parent="VisualOptionsContainer/VisualOptions/VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 3

[node name="ResolutionScale-Slider" type="HSlider" parent="VisualOptionsContainer/VisualOptions/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 3
min_value = 1.0
max_value = 5.0
value = 1.0

[node name="ColorDepth-Slider" type="HSlider" parent="VisualOptionsContainer/VisualOptions/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 3
min_value = 1.0
max_value = 8.0
value = 5.0

[node name="SoundOptionsContainer" type="MarginContainer" parent="."]
visible = false
layout_mode = 2
size_flags_vertical = 0
size_flags_stretch_ratio = 1.95
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 40

[node name="VisualOptions" type="HBoxContainer" parent="SoundOptionsContainer"]
layout_mode = 2
size_flags_vertical = 0
size_flags_stretch_ratio = 2.65

[node name="VBoxContainer" type="VBoxContainer" parent="SoundOptionsContainer/VisualOptions"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
size_flags_stretch_ratio = 0.65

[node name="WeaponSounds" type="Label" parent="SoundOptionsContainer/VisualOptions/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 2
text = "WEAPONS"
label_settings = SubResource("LabelSettings_jymd7")

[node name="WeaponSounds2" type="Label" parent="SoundOptionsContainer/VisualOptions/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 2
text = "ENVIRONMENT"
label_settings = SubResource("LabelSettings_jymd7")

[node name="WeaponSounds3" type="Label" parent="SoundOptionsContainer/VisualOptions/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 2
text = "EFFECTS"
label_settings = SubResource("LabelSettings_jymd7")

[node name="VBoxContainer2" type="VBoxContainer" parent="SoundOptionsContainer/VisualOptions"]
layout_mode = 2
size_flags_horizontal = 3

[node name="WeaponSounds-Slider" type="HSlider" parent="SoundOptionsContainer/VisualOptions/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 2
max_value = 1.0
step = 0.001

[node name="EnvironmentSounds-Slider" type="HSlider" parent="SoundOptionsContainer/VisualOptions/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 2
max_value = 1.0
step = 0.001

[node name="EffectsSounds-Slider" type="HSlider" parent="SoundOptionsContainer/VisualOptions/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 2
max_value = 1.0
step = 0.001

[node name="ControlsOptionsContainer" type="MarginContainer" parent="."]
visible = false
layout_mode = 2
size_flags_vertical = 0
size_flags_stretch_ratio = 4.41
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 40

[node name="VisualOptions" type="HBoxContainer" parent="ControlsOptionsContainer"]
layout_mode = 2
size_flags_vertical = 0

[node name="VBoxContainer" type="VBoxContainer" parent="ControlsOptionsContainer/VisualOptions"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
size_flags_stretch_ratio = 2.18

[node name="WeaponSounds" type="Label" parent="ControlsOptionsContainer/VisualOptions/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 2
text = "MOVEMENT"
label_settings = SubResource("LabelSettings_jymd7")

[node name="WeaponSounds2" type="Label" parent="ControlsOptionsContainer/VisualOptions/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 2
text = "JUMP"
label_settings = SubResource("LabelSettings_jymd7")

[node name="WeaponSounds5" type="Label" parent="ControlsOptionsContainer/VisualOptions/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 2
text = "SPRINT"
label_settings = SubResource("LabelSettings_jymd7")

[node name="WeaponSounds6" type="Label" parent="ControlsOptionsContainer/VisualOptions/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 2
text = "CROUCH"
label_settings = SubResource("LabelSettings_jymd7")

[node name="WeaponSounds3" type="Label" parent="ControlsOptionsContainer/VisualOptions/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 2
text = "FIRE"
label_settings = SubResource("LabelSettings_jymd7")

[node name="WeaponSounds4" type="Label" parent="ControlsOptionsContainer/VisualOptions/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 2
text = "AIM DOWN SIGHT"
label_settings = SubResource("LabelSettings_jymd7")

[node name="WeaponSounds7" type="Label" parent="ControlsOptionsContainer/VisualOptions/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 2
text = "SWAP WEAPON"
label_settings = SubResource("LabelSettings_jymd7")

[node name="WeaponSounds8" type="Label" parent="ControlsOptionsContainer/VisualOptions/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 2
text = "PRIMARY WEAPON"
label_settings = SubResource("LabelSettings_jymd7")

[node name="WeaponSounds9" type="Label" parent="ControlsOptionsContainer/VisualOptions/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 2
text = "SECONDARY WEAPON"
label_settings = SubResource("LabelSettings_jymd7")

[node name="WeaponSounds10" type="Label" parent="ControlsOptionsContainer/VisualOptions/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 2
text = "LEANING"
label_settings = SubResource("LabelSettings_jymd7")

[node name="WeaponSounds11" type="Label" parent="ControlsOptionsContainer/VisualOptions/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 2
text = "INTERACT"
label_settings = SubResource("LabelSettings_jymd7")

[node name="WeaponSounds12" type="Label" parent="ControlsOptionsContainer/VisualOptions/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 2
text = "MELEE"
label_settings = SubResource("LabelSettings_jymd7")

[node name="WeaponSounds13" type="Label" parent="ControlsOptionsContainer/VisualOptions/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 2
text = "FLASHLIGHT"
label_settings = SubResource("LabelSettings_jymd7")

[node name="WeaponSounds14" type="Label" parent="ControlsOptionsContainer/VisualOptions/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 2
text = "FIREMODE"
label_settings = SubResource("LabelSettings_jymd7")

[node name="WeaponSounds15" type="Label" parent="ControlsOptionsContainer/VisualOptions/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 2
text = "MENU"
label_settings = SubResource("LabelSettings_jymd7")

[node name="VBoxContainer2" type="VBoxContainer" parent="ControlsOptionsContainer/VisualOptions"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0

[node name="WeaponSounds" type="Label" parent="ControlsOptionsContainer/VisualOptions/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 2
text = "W/A/S/D"
label_settings = SubResource("LabelSettings_jymd7")

[node name="WeaponSounds2" type="Label" parent="ControlsOptionsContainer/VisualOptions/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 2
text = "SPACEBAR"
label_settings = SubResource("LabelSettings_jymd7")

[node name="WeaponSounds3" type="Label" parent="ControlsOptionsContainer/VisualOptions/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 2
text = "SHIFT"
label_settings = SubResource("LabelSettings_jymd7")

[node name="WeaponSounds4" type="Label" parent="ControlsOptionsContainer/VisualOptions/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 2
text = "CONTROL"
label_settings = SubResource("LabelSettings_jymd7")

[node name="WeaponSounds5" type="Label" parent="ControlsOptionsContainer/VisualOptions/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 2
text = "LEFT CLICK"
label_settings = SubResource("LabelSettings_jymd7")

[node name="WeaponSounds6" type="Label" parent="ControlsOptionsContainer/VisualOptions/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 2
text = "RIGHT CLICK"
label_settings = SubResource("LabelSettings_jymd7")

[node name="WeaponSounds7" type="Label" parent="ControlsOptionsContainer/VisualOptions/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 2
text = "MOUSE WHEEL UP / DOWN"
label_settings = SubResource("LabelSettings_jymd7")

[node name="WeaponSounds8" type="Label" parent="ControlsOptionsContainer/VisualOptions/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 2
text = "1"
label_settings = SubResource("LabelSettings_jymd7")

[node name="WeaponSounds9" type="Label" parent="ControlsOptionsContainer/VisualOptions/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 2
text = "2"
label_settings = SubResource("LabelSettings_jymd7")

[node name="WeaponSounds10" type="Label" parent="ControlsOptionsContainer/VisualOptions/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 2
text = "	Q / E"
label_settings = SubResource("LabelSettings_jymd7")

[node name="WeaponSounds11" type="Label" parent="ControlsOptionsContainer/VisualOptions/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 2
text = "F"
label_settings = SubResource("LabelSettings_jymd7")

[node name="WeaponSounds12" type="Label" parent="ControlsOptionsContainer/VisualOptions/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 2
text = "V"
label_settings = SubResource("LabelSettings_jymd7")

[node name="WeaponSounds13" type="Label" parent="ControlsOptionsContainer/VisualOptions/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 2
text = "Z"
label_settings = SubResource("LabelSettings_jymd7")

[node name="WeaponSounds14" type="Label" parent="ControlsOptionsContainer/VisualOptions/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 2
text = "X"
label_settings = SubResource("LabelSettings_jymd7")

[node name="WeaponSounds15" type="Label" parent="ControlsOptionsContainer/VisualOptions/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 2
text = "ESCAPE"
label_settings = SubResource("LabelSettings_jymd7")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_nrxot")
}

[connection signal="pressed" from="MarginContainer/OptionsNavigation/VisualsButton" to="." method="_on_visuals_button_pressed"]
[connection signal="pressed" from="MarginContainer/OptionsNavigation/SoundButton" to="." method="_on_sound_button_pressed"]
[connection signal="pressed" from="MarginContainer/OptionsNavigation/ControlsButton" to="." method="_on_controls_button_pressed"]
[connection signal="item_selected" from="VisualOptionsContainer/VisualOptions/VBoxContainer2/ResolutionList" to="." method="_on_resolution_list_item_selected"]
[connection signal="pressed" from="VisualOptionsContainer/VisualOptions/VBoxContainer2/Fullscreen-Checkbox" to="." method="_on_fullscreen_checkbox_pressed"]
[connection signal="pressed" from="VisualOptionsContainer/VisualOptions/VBoxContainer2/Vsync-Checkbox" to="." method="_on_vsync_checkbox_pressed"]
[connection signal="toggled" from="VisualOptionsContainer/VisualOptions/VBoxContainer2/HasDithering-Checkbox" to="." method="_on_has_dithering_checkbox_toggled"]
[connection signal="value_changed" from="VisualOptionsContainer/VisualOptions/VBoxContainer2/ResolutionScale-Slider" to="." method="_on_resolution_scale_slider_value_changed"]
[connection signal="value_changed" from="VisualOptionsContainer/VisualOptions/VBoxContainer2/ColorDepth-Slider" to="." method="_on_color_depth_slider_value_changed"]
[connection signal="value_changed" from="SoundOptionsContainer/VisualOptions/VBoxContainer2/WeaponSounds-Slider" to="." method="_on_weapon_sounds_slider_value_changed"]
[connection signal="value_changed" from="SoundOptionsContainer/VisualOptions/VBoxContainer2/EnvironmentSounds-Slider" to="." method="_on_environment_sounds_slider_value_changed"]
[connection signal="value_changed" from="SoundOptionsContainer/VisualOptions/VBoxContainer2/EffectsSounds-Slider" to="." method="_on_effects_sounds_slider_value_changed"]
